# challenges

./: makefile
rust/: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
rust/aoc/: new.fish  new.sh
rust/aoc/2022/: new.sh
rust/aoc/2022/1/: Cargo.toml
rust/aoc/2022/10/: Cargo.toml
rust/aoc/2022/11/: Cargo.toml
rust/aoc/2022/12/: Cargo.toml
rust/aoc/2022/13/: Cargo.toml  tmp.txt
rust/aoc/2022/14/: Cargo.toml
rust/aoc/2022/15/: Cargo.toml
rust/aoc/2022/16/: Cargo.toml
rust/aoc/2022/17/: Cargo.toml
rust/aoc/2022/18/: Cargo.toml
rust/aoc/2022/19/: Cargo.toml
rust/aoc/2022/2/: Cargo.toml
rust/aoc/2022/20/: Cargo.toml
rust/aoc/2022/21/: Cargo.toml
rust/aoc/2022/22/: Cargo.toml
rust/aoc/2022/23/: Cargo.toml
rust/aoc/2022/24/: Cargo.toml
rust/aoc/2022/25/: Cargo.toml
rust/aoc/2022/3/: Cargo.toml
rust/aoc/2022/4/: Cargo.toml
rust/aoc/2022/5/: Cargo.toml
rust/aoc/2022/6/: Cargo.toml
rust/aoc/2022/7/: Cargo.toml
rust/aoc/2022/8/: Cargo.toml
rust/aoc/2022/9/: Cargo.toml
rust/aoc/2023/01/: Cargo.toml
rust/aoc/2023/02/: Cargo.toml
rust/aoc/2023/03/: Cargo.toml
rust/aoc/2023/04/: Cargo.toml
rust/aoc/2023/05/: Cargo.toml
rust/aoc/2023/06/: Cargo.toml
rust/aoc/2023/07/: Cargo.toml
rust/aoc/2023/08/: Cargo.toml
rust/aoc/2023/09/: Cargo.toml
rust/aoc/2023/10/: Cargo.toml
rust/aoc/template/: Cargo.toml
rust/challenges_common/: Cargo.toml
rust/challenges_common/src/: geom.rs  input.rs  lib.rs  math.rs  split.rs
rust/leetcode/: new.sh
rust/leetcode/1342/: Cargo.toml
rust/leetcode/876/: Cargo.toml
(+364 files in other folders)
