[workspace]
members = [
    "challenges_common",
    "aoc/*/*", "aoc/2023/07",
    #    "leetcode/*",
]
resolver = "2"

[workspace.metadata]


[workspace.dependencies]
challenges_common = { path = "./challenges_common" }
anyhow = "*"
itertools = "*"
lazy-regex = "*"
regex = "*"
petgraph = "*"
rpds = "*"
lazy_static = "*"
num-traits = "0.2"
