[workspace]
members = ["challenges_common", "aoc/*/*"]
resolver = "2"

[workspace.dependencies]
challenges_common = { path = "./challenges_common" }
anyhow = "*"
itertools = "*"
lazy-regex = "*"
regex = "*"
petgraph = "*"
rpds = "*"
lazy_static = "*"
num-traits = "0.2"
thiserror = "*"

[profile.release]
codegen-units = 1
lto = "fat"
