[workspace]
members = ["challenges_common", "aoc/[!a-z]*/*"]
resolver = "2"

[workspace.dependencies]
challenges_common = { path = "./challenges_common" }
anyhow = "*"
itertools = "*"
lazy-regex = "*"
regex = "*"
petgraph = "*"
rpds = "*"
lazy_static = "*"
num-traits = "*"
thiserror = "*"
array-init = "*"

[profile.release]
codegen-units = 1
lto = "fat"
