[package]
name = "aoc_2022_11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
challenges_common = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
